Fix crash in UIKit: +[UIViewController _viewControllerForFullScreenPresentationFromView:] https://bugs.webkit.org/show_bug.cgi?id=174143 <rdar://problem/28384582>

Reviewed by Wenson Hsieh.

In -[WKActionSheet willRotate], we can't guarantee that the action sheet belongs
in a window, and passing nil to +[UIViewController _viewControllerForFullScreenPresentationFromView:]
throws an exception. To fix this, bail early if the result from -hostViewForSheet is nil.

* UIProcess/ios/WKActionSheet.mm:
(-[WKActionSheet willRotate]):


Canonical link: https://commits.webkit.org/190988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219136 268f45cc-cd09-0410-ab3c-d52691b4dbfc